[package]
name = "cacher_rs"
version = "0.0.1"
edition = "2021"
description = "memory cache"
license = "MIT OR Apache-2.0"
authors = ["sanmu <578595193@qq.com>"]
#include = ["src/**/*.rs", "README.md"]
readme = "./README.md"
repository = "https://github.com/cargo-crates/cacher_rs"
categories = ["cache"]
keywords = ["cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
