[package]
name = "mem_cache"
version = "0.1.0"
edition = "2021"
description = "memory cache"
license = "MIT OR Apache-2.0"
authors = ["sanmu <578595193@qq.com>"]
#include = ["src/**/*.rs", "README.md"]
readme = "./README.md"
repository = "https://github.com/cargo-crates/mem_cache"
categories = ["caching"]
keywords = ["cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"